--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,1 +1,16 @@
-<%= @list.name %>
+<h2 class="subtitle"><%= @list.name %></h2>
+
+<table class="table">
+  <tr>
+    <th>Description</th>
+    <th>Schedule</th>
+  </tr>
+  <% @list.tasks.each do |task| %>
+    <tr>
+      <td><%= link_to task.description, list_task_path(@list, task) %></td>
+      <td><%= task.schedule %></td>
+    </tr>
+  <% end %>
+</table>
+
+<p><%= link_to "Add a task", new_list_task_path(@list) %></p>
