--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -4,11 +4,19 @@
   <tr>
     <th>Description</th>
     <th>Schedule</th>
+    <th>Last completed</th>
+    <th></th>
   </tr>
-  <% @list.tasks.each do |task| %>
+  <% @list.task_with_completions.each do |task| %>
     <tr>
       <td><%= link_to task.description, list_task_path(@list, task) %></td>
       <td><%= task.schedule %></td>
+      <td><%= TaskDecorator.new(task).last_completed %></td>
+      <td>
+        <div class="is-pulled-right">
+          <%= link_to "Complete", complete_list_task_path(@list, task), method: :patch, class: "button" %>
+        </div>
+      </td>
     </tr>
   <% end %>
 </table>
