--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -1,2 +1,2 @@
 <h2 class="subtitle">Track periodic tasks</h2>
-<p><%= link_to "Sign in with Google" %> to get started.</p>
+<p><%= link_to "Sign in with Google", "/auth/google_oauth2" %> to get started.</p>
