--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,4 +1,10 @@
 <h2 class="subtitle"><%= @list.name %></h2>
+<% if @users.present? %>
+  <p>
+    Shared with <%= @users.map(&:name).join(", ") %>.
+  </p>
+  <br>
+<% end %>
 
 <table class="table">
   <tr>
