Add ability to undo a completion

--- a/app/views/lists/_task.html.erb
+++ b/app/views/lists/_task.html.erb
@@ -1,15 +1,17 @@
 <% TaskDecorator.new(task).tap do |decorated_task| %>
   <tr class="task <%= decorated_task.task_class %>">
-    <td><%= task.description %></td>
+    <td><%= link_to task.description, list_task_path(list, task) %></td>
     <td><%= decorated_task.schedule_explanation %></td>
-    <td><%= decorated_task.last_completed %></td>
+    <td>
+      <%= decorated_task.last_completed %>
+    </td>
     <td>
       <div class="is-pulled-right">
-        <%= link_to "Delete", list_task_path(list, task), class: "button is-danger", method: :delete, data: { confirm: "Are you sure?" } %>
-        &nbsp;
-        <%= link_to "Edit", edit_list_task_path(list, task), class: "button" %>
-        &nbsp;
-        <%= link_to "Complete", complete_list_task_path(list, task), method: :patch, class: "button is-primary" %>
+        <% if task.complete? %>
+          <%= link_to "Undo complete", list_task_completion_path(list, task, task.completion_id), class: "button is-danger", method: :delete, data: { confirm: "Are you sure?" } %>
+          &nbsp;
+        <% end %>
+        <%= link_to "Complete", list_task_completions_path(list, task), method: :post, class: "button is-primary" %>
       </div>
     </td>
   </tr>
