--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,6 +4,11 @@
   border-radius: 0;
 }
 
-.task.completed {
-  background-color: rgba($primary, 0.2);
+.task {
+  a {
+    color: $text;
+  }
+  &.completed {
+    background-color: rgba($primary, 0.2);
+  }
 }
