--- a/app/views/lists/_task.html.erb
+++ b/app/views/lists/_task.html.erb
@@ -1,18 +1,35 @@
 <% TaskDecorator.new(task).tap do |decorated_task| %>
-  <tr class="task <%= decorated_task.task_class %>">
-    <td><%= link_to task.description, list_task_path(list, task) %></td>
-    <td><%= decorated_task.schedule_explanation %></td>
-    <td>
-      <%= decorated_task.last_completed %>
-    </td>
-    <td>
-      <div class="is-pulled-right">
-        <% if task.complete? %>
-          <%= link_to "Undo complete", list_task_completion_path(list, task, task.completion_id), class: "button is-danger", method: :delete, data: { confirm: "Are you sure?" } %>
-          &nbsp;
-        <% end %>
-        <%= link_to "Complete", list_task_completions_path(list, task), method: :post, class: "button is-primary" %>
+  <section class="box <%= decorated_task.task_class %>">
+    <div class="columns">
+      <div class="column">
+        <div class="columns">
+          <div class="column">
+            <%= link_to task.description, list_task_path(list, task), class: "task__link" %>
+          </div>
+          <div class="column">
+            <strong>Schedule</strong>
+            <%= decorated_task.schedule_explanation %>
+          </div>
+          <div class="column">
+            <% if task.last_completed_at.present? %>
+              <strong>Last completed</strong>
+              <%= decorated_task.last_completed %>
+            <% end %>
+          </div>
+        </div>
       </div>
-    </td>
-  </tr>
+      <div class="column task__actions">
+        <div>
+          <%= link_to "Complete", list_task_completions_path(list, task), method: :post, class: "button is-primary" %>
+        </div>
+        <% if task.complete? %>
+          <div>
+            &nbsp;
+            <%= link_to "Undo complete", list_task_completion_path(list, task, task.completion_id), class: "button is-danger", method: :delete, data: { confirm: "Are you sure?" } %>
+            &nbsp;
+          </div>
+        <% end %>
+      </div>
+    </div>
+  </section>
 <% end %>
