Make task links make more sense

--- a/app/views/lists/_task.html.erb
+++ b/app/views/lists/_task.html.erb
@@ -4,7 +4,7 @@
       <div class="column">
         <div class="columns">
           <div class="column">
-            <%= link_to task.description, list_task_path(list, task), class: "task__link" %>
+            <%= link_to task.description, list_task_path(list, task) %>
           </div>
           <div class="column">
             <strong>Schedule</strong>
