--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,6 +4,10 @@
   border-radius: 0;
 }
 
+.task {
+  align-items: flex-end;
+}
+
 .task--completed {
   background-color: rgba($primary, 0.1);
 }
@@ -14,8 +18,13 @@
   @media (min-width: $tablet) {
     flex-direction: row-reverse;
     justify-content: flex-start;
-    flex-basis: 300px;
+    flex-basis: 350px;
   }
+}
+
+.button-padded {
+  padding-bottom: 0.4em;
+  padding-top: 0.35em;
 }
 
 .list__actions {
