--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,31 +1,58 @@
-<%= form_for [task.list, task] do |f| %>
-  <div class="field">
-    <%= f.label :description, class: "label" %>
-    <p class="control">
-      <% if task.errors[:description].present? %>
-        <%= f.text_field :description, class: "input is-danger" %>
-        <p class="help is-danger"><%= task.errors.full_message :description, task.errors[:description].first %></p>
-      <% else %>
-        <%= f.text_field :description, class: "input" %>
-      <% end %>
-    </p>
-  </div>
-  <div class="field">
-    <%= f.label :schedule, class: "label" %>
-    <p class="control">
-      <span class="select">
-        <% if task.errors[:schedule].present? %>
-          <%= f.select :schedule, TaskDecorator.schedule_options, class: "input is-danger" %>
-          <p class="help is-danger"><%= task.errors.full_message :schedule, task.errors[:schedule].first %></p>
-        <% else %>
-          <%= f.select :schedule, TaskDecorator.schedule_options, class: "input" %>
+<% TaskDecorator.new(task.with_completion).tap do |decorated_task| %>
+  <%= form_for [task.list, task], remote: true do |f| %>
+    <div class="columns task">
+      <div class="column">
+        <div class="columns task">
+          <div class="column">
+            <%= f.label :description, class: "label" %>
+            <p class="control">
+            <% if task.errors[:description].present? %>
+              <%= f.text_field :description, class: "input is-danger" %>
+              <p class="help is-danger"><%= task.errors.full_message :description, task.errors[:description].first %></p>
+            <% else %>
+              <%= f.text_field :description, class: "input" %>
+            <% end %>
+            </p>
+          </div>
+          <div class="column">
+            <%= f.label :schedule, class: "label" %>
+            <p class="control">
+            <span class="select">
+              <% if task.errors[:schedule].present? %>
+                <%= f.select :schedule, TaskDecorator.schedule_options, class: "input is-danger" %>
+                <p class="help is-danger"><%= task.errors.full_message :schedule, task.errors[:schedule].first %></p>
+              <% else %>
+                <%= f.select :schedule, TaskDecorator.schedule_options, class: "input" %>
+              <% end %>
+            </span>
+            </p>
+          </div>
+          <div class="column">
+            <% if decorated_task.last_completed_at.present? %>
+              <p class="button-padded">
+                <strong>Last completed</strong>
+                <span class="is-inline-block"><%= decorated_task.last_completed %></span>
+              </p>
+            <% end %>
+          </div>
+        </div>
+      </div>
+      <div class="column task__actions">
+        <div>
+          <%= f.submit nil, class: "button is-primary" %>
+          &nbsp;
+        </div>
+        <% if task.persisted? %>
+          <div>
+            <%= link_to "Delete", list_task_path(task.list, task), class: "button is-danger", method: :delete, remote: true, data: { confirm: "Are you sure?" } %>
+            &nbsp;
+          </div>
         <% end %>
-      </span>
-    </p>
-  </div>
-  <%= f.submit nil, class: "button is-primary" %>
+        <div>
+          <%= link_to "Cancel", list_path(task.list), class: "button" %>
+          &nbsp;
+        </div>
+      </div>
+    </div>
+  <% end %>
 <% end %>
-
-<hr>
-
-<p><%= link_to "Cancel", list_path(task.list) %></p>
