--- a/app/views/tasks/edit.js.erb
+++ b/app/views/tasks/edit.js.erb
@@ -1,3 +1,3 @@
 <%= render "tasks/set_flashes" %>
 
-document.getElementById('task-<%= @task.id %>').innerHTML = '<%= j render 'tasks/form', task: @task %>';
+document.getElementById('task-<%= @task.id %>').innerHTML = '<%= j render 'tasks/form', task: @task, remote: true %>';
